k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bare-web-proxy-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare-prod"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - bwproxy.wpcapp.net
    secretName: bare-web-proxy-tls-secret
  rules:
  - host: bwproxy.wpcapp.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bare-web-proxy-service
            port:
              number: 80
